--- a/package.json
+++ b/package.json
@@ -11,9 +11,20 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cocatrip/ds-order.git"
-  }
-  "author": "",
-  "license": "ISC",
+  },
+  "author": "Adrianus Vian",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cocatrip/ds-order/issues"
+  },
+  "homepage": "https://github.com/cocatrip/ds-order#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.12",
+    "validation": "^0.0.1"
+  },
   "devDependencies": {
     "nodemon": "^2.0.15"
   }
